deploy/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gesuch-app
spec:
  replicas: 2
  progressDeadlineSeconds: 120
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gesuch-app
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: gesuch-app
          imagePullPolicy: Always
          image: docker-registry.public.dvbern.ch/kibon/stip/gesuch-app:latest
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /_health
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /_health
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      imagePullSecrets:
        - name: dvbern-public-registry
