deploy/base/service-sb.yml
apiVersion: v1
kind: Service
metadata:
  name: sachbearbeitung-app
  labels:
    app: sachbearbeitung-app
spec:
  ports:
      - port: 80
        name: http
  selector:
    app: sachbearbeitung-app
  type: ClusterIP
