deploy/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gesuch-app
spec:
  ports:
      - port: 80
        name: http
  selector:
    app: gesuch-app
  type: ClusterIP
